@@ -82,6 +82,7 @@ public class GeneralTab extends PreferencePanel
 		long maxMemLimit = runtime.maxMemory() / 1024 / 1024;
 		generalMemoryUsage.setText("Current memory usage: " + Long.toString(maxMemLimit) + " megabytes");
 		generalMaxMem.setText(Long.toString(User.getMemorySize()));
+        generalMaxSize.setText(Long.toString(User.getPermSpace()));
 		generalUseTwoJVMs.setSelected(User.isUseTwoJVMs());
 		generalUseTwoJVMs.setEnabled(false);
 		generalLogClientServer.setSelected(User.isUseClientServer());
@@ -149,6 +150,10 @@ public class GeneralTab extends PreferencePanel
 		if (currInt != User.getMemorySize())
 			User.setMemorySize(currInt);
 
+        currInt = TextUtils.atoi(generalMaxSize.getText());
+		if (currInt != User.getPermSpace())
+			User.setPermSpace(currInt);
+
         currInt = TextUtils.atoi(maxUndoHistory.getText());
         if (currInt != User.getMaxUndoHistory()) {
             User.setMaxUndoHistory(currInt);
@@ -169,9 +174,7 @@ public class GeneralTab extends PreferencePanel
 	 * WARNING: Do NOT modify this code. The content of this method is
 	 * always regenerated by the Form Editor.
 	 */
-    // <editor-fold defaultstate="collapsed" desc=" Generated Code ">//GEN-BEGIN:initComponents
-    private void initComponents()
-    {
+    private void initComponents() {//GEN-BEGIN:initComponents
         java.awt.GridBagConstraints gridBagConstraints;
 
         general = new javax.swing.JPanel();
@@ -183,6 +186,9 @@ public class GeneralTab extends PreferencePanel
         jLabel62 = new javax.swing.JLabel();
         generalUseTwoJVMs = new javax.swing.JCheckBox();
         generalLogClientServer = new javax.swing.JCheckBox();
+        jLabel63 = new javax.swing.JLabel();
+        generalMaxSize = new javax.swing.JTextField();
+        jLabel64 = new javax.swing.JLabel();
         display = new javax.swing.JPanel();
         generalShowCursorCoordinates = new javax.swing.JCheckBox();
         sideBarOnRight = new javax.swing.JCheckBox();
@@ -214,10 +220,8 @@ public class GeneralTab extends PreferencePanel
 
         setTitle("Edit Options");
         setName("");
-        addWindowListener(new java.awt.event.WindowAdapter()
-        {
-            public void windowClosing(java.awt.event.WindowEvent evt)
-            {
+        addWindowListener(new java.awt.event.WindowAdapter() {
+            public void windowClosing(java.awt.event.WindowEvent evt) {
                 closeDialog(evt);
             }
         });
@@ -226,7 +230,7 @@ public class GeneralTab extends PreferencePanel
 
         memory.setLayout(new java.awt.GridBagLayout());
 
-        memory.setBorder(javax.swing.BorderFactory.createTitledBorder("Memory"));
+        memory.setBorder(new javax.swing.border.TitledBorder("Memory"));
         jLabel60.setText("Maximum memory:");
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
@@ -263,31 +267,55 @@ public class GeneralTab extends PreferencePanel
         jLabel62.setText("Changes to memory take effect when Electric is next run");
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
-        gridBagConstraints.gridy = 2;
+        gridBagConstraints.gridy = 3;
         gridBagConstraints.gridwidth = 3;
         gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
         gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
         memory.add(jLabel62, gridBagConstraints);
 
         generalUseTwoJVMs.setText("Use two JVMs (Client and Server)");
-        generalUseTwoJVMs.setBorder(javax.swing.BorderFactory.createEmptyBorder(0, 0, 0, 0));
+        generalUseTwoJVMs.setBorder(new javax.swing.border.EmptyBorder(new java.awt.Insets(0, 0, 0, 0)));
         generalUseTwoJVMs.setMargin(new java.awt.Insets(0, 0, 0, 0));
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
-        gridBagConstraints.gridy = 4;
+        gridBagConstraints.gridy = 5;
         gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
         gridBagConstraints.insets = new java.awt.Insets(1, 4, 4, 4);
         memory.add(generalUseTwoJVMs, gridBagConstraints);
 
         generalLogClientServer.setText("Use Client / Server interactions");
-        generalLogClientServer.setBorder(javax.swing.BorderFactory.createEmptyBorder(0, 0, 0, 0));
+        generalLogClientServer.setBorder(new javax.swing.border.EmptyBorder(new java.awt.Insets(0, 0, 0, 0)));
         generalLogClientServer.setMargin(new java.awt.Insets(0, 0, 0, 0));
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
-        gridBagConstraints.gridy = 3;
+        gridBagConstraints.gridy = 4;
         gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
         gridBagConstraints.insets = new java.awt.Insets(4, 4, 1, 4);
         memory.add(generalLogClientServer, gridBagConstraints);
+
+        jLabel63.setText("Maximum permanent space:");
+        gridBagConstraints = new java.awt.GridBagConstraints();
+        gridBagConstraints.gridx = 0;
+        gridBagConstraints.gridy = 2;
+        gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
+        gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
+        memory.add(jLabel63, gridBagConstraints);
+
+        generalMaxSize.setColumns(6);
+        generalMaxSize.setText(" ");
+        gridBagConstraints = new java.awt.GridBagConstraints();
+        gridBagConstraints.gridx = 1;
+        gridBagConstraints.gridy = 2;
+        gridBagConstraints.fill = java.awt.GridBagConstraints.HORIZONTAL;
+        gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
+        memory.add(generalMaxSize, gridBagConstraints);
+
+        jLabel64.setText("megabytes");
+        gridBagConstraints = new java.awt.GridBagConstraints();
+        gridBagConstraints.gridx = 2;
+        gridBagConstraints.gridy = 2;
+        gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
+        memory.add(jLabel64, gridBagConstraints);
 
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
@@ -297,7 +325,7 @@ public class GeneralTab extends PreferencePanel
 
         display.setLayout(new java.awt.GridBagLayout());
 
-        display.setBorder(javax.swing.BorderFactory.createTitledBorder("Display"));
+        display.setBorder(new javax.swing.border.TitledBorder("Display"));
         generalShowCursorCoordinates.setText("Show hierarchical cursor coordinates in status bar");
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
@@ -411,7 +439,7 @@ public class GeneralTab extends PreferencePanel
 
         IO.setLayout(new java.awt.GridBagLayout());
 
-        IO.setBorder(javax.swing.BorderFactory.createTitledBorder("I/O"));
+        IO.setBorder(new javax.swing.border.TitledBorder("I/O"));
         generalShowFileDialog.setText("Show file-selection dialog before writing netlists");
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
@@ -444,7 +472,7 @@ public class GeneralTab extends PreferencePanel
 
         jobs.setLayout(new java.awt.GridBagLayout());
 
-        jobs.setBorder(javax.swing.BorderFactory.createTitledBorder("Jobs"));
+        jobs.setBorder(new javax.swing.border.TitledBorder("Jobs"));
         generalBeepAfterLongJobs.setText("Beep after long jobs");
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
@@ -495,10 +523,8 @@ public class GeneralTab extends PreferencePanel
         jobs.add(jLabel53, gridBagConstraints);
 
         generalVerboseMode.setText("Verbose mode");
-        generalVerboseMode.addActionListener(new java.awt.event.ActionListener()
-        {
-            public void actionPerformed(java.awt.event.ActionEvent evt)
-            {
+        generalVerboseMode.addActionListener(new java.awt.event.ActionListener() {
+            public void actionPerformed(java.awt.event.ActionEvent evt) {
                 generalVerboseModeActionPerformed(evt);
             }
         });
@@ -520,7 +546,7 @@ public class GeneralTab extends PreferencePanel
         getContentPane().add(general, new java.awt.GridBagConstraints());
 
         pack();
-    }// </editor-fold>//GEN-END:initComponents
+    }//GEN-END:initComponents
 
     private void generalVerboseModeActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_generalVerboseModeActionPerformed
 // TODO add your handling code here:
@@ -543,6 +569,7 @@ public class GeneralTab extends PreferencePanel
     private javax.swing.JTextField generalGreekLimit;
     private javax.swing.JCheckBox generalLogClientServer;
     private javax.swing.JTextField generalMaxMem;
+    private javax.swing.JTextField generalMaxSize;
     private javax.swing.JLabel generalMemoryUsage;
     private javax.swing.JCheckBox generalOlderDisplayAlgorithm;
     private javax.swing.JComboBox generalPanningDistance;
@@ -563,6 +590,8 @@ public class GeneralTab extends PreferencePanel
     private javax.swing.JLabel jLabel60;
     private javax.swing.JLabel jLabel61;
     private javax.swing.JLabel jLabel62;
+    private javax.swing.JLabel jLabel63;
+    private javax.swing.JLabel jLabel64;
     private javax.swing.JLabel jLabel7;
     private javax.swing.JPanel jobs;
     private javax.swing.JTextField maxUndoHistory;
