@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04g: *********************************
 
+IMP: (3/12/06, GVG) Ability to set MaxPermSize option as preference (Bug #866)
+If value is zero, then doesn't set anything. New item in General Tab.
+
 IMP: (3/12/06, GVG) Make saving last DRC date with libraries an option (Bug #847).
 New flag in DRC tab.
 
